// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`item 68 (Falchion) DTO matches snapshot 1`] = `
{
  "accCombat": null,
  "armorType": null,
  "bodypart": "One-handed",
  "crystalCount": null,
  "etcItemType": null,
  "grade": "none",
  "iconFile": "weapon_falchion_i00.png",
  "id": 68,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 21,
  "mDef": null,
  "material": "BRONZE",
  "mpConsume": null,
  "name": "Falchion",
  "pAtk": 31,
  "pAtkSpd": 379,
  "pDef": null,
  "price": 244000,
  "rCrit": 8,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": 2,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_falchion_i00.png",
      "itemId": 6354,
      "name": "Falchion - for Beginners",
      "saName": "for Beginners",
      "skills": [],
    },
  ],
  "spiritshots": 2,
  "type": "weapon",
  "weaponType": "SWORD",
  "weight": 1530,
}
`;

exports[`item 72 (Stormbringer) DTO matches snapshot 1`] = `
{
  "accCombat": null,
  "armorType": null,
  "bodypart": "One-handed",
  "craftedBy": [
    {
      "recipeItemId": 2298,
      "recipeName": "Recipe: Stormbringer",
      "successRate": 100,
    },
  ],
  "crystalCount": 916,
  "etcItemType": null,
  "grade": "c",
  "iconFile": "weapon_stormbringer_i00.png",
  "id": 72,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 61,
  "mDef": null,
  "material": "FINE_STEEL",
  "mpConsume": null,
  "name": "Stormbringer",
  "pAtk": 107,
  "pAtkSpd": 379,
  "pDef": null,
  "price": 2290000,
  "rCrit": 8,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": 2,
  "specialAbilityOptions": [
    {
      "effectChance": 10,
      "iconFile": "weapon_stormbringer_i01.png",
      "itemId": 4681,
      "name": "Stormbringer - Critical Anger",
      "saName": "Critical Anger",
      "skills": [
        {
          "description": "Causes additional damage during a critical attack while reducing one's own HP.",
          "effects": [
            {
              "op": "add",
              "stat": "cAtkAdd",
              "value": 249,
            },
          ],
          "iconFile": null,
          "id": 3026,
          "level": 1,
          "name": "Special Ability: Critical Anger",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
        {
          "description": null,
          "iconFile": null,
          "id": 3025,
          "level": 1,
          "name": "Special Ability: Critical Anger",
          "operateType": "OP_ACTIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_stormbringer_i01.png",
      "itemId": 4682,
      "name": "Stormbringer - Focus",
      "saName": "Focus",
      "skills": [
        {
          "description": "Increases critical attack success rate.",
          "effects": [
            {
              "op": "add",
              "stat": "rCrit",
              "value": 87,
            },
          ],
          "iconFile": null,
          "id": 3010,
          "level": 1,
          "name": "Special Ability: Focus",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_stormbringer_i01.png",
      "itemId": 4683,
      "name": "Stormbringer - Light",
      "saName": "Light",
      "skills": [],
      "statDelta": {
        "deltaPercent": -70,
        "display": "-70% Weight",
        "stat": "weight",
      },
    },
  ],
  "spiritshots": 2,
  "type": "weapon",
  "weaponType": "SWORD",
  "weight": 1430,
}
`;

exports[`item 164 (Elysian) DTO matches snapshot 1`] = `
{
  "accCombat": 4,
  "armorType": null,
  "bodypart": "One-handed",
  "craftedBy": [
    {
      "recipeItemId": 5440,
      "recipeName": "Recipe: Elysian(60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 5441,
      "recipeName": "Recipe: Elysian(100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2160,
  "etcItemType": null,
  "grade": "a",
  "iconFile": "weapon_elysian_i00.png",
  "id": 164,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 114,
  "mDef": null,
  "material": "ORIHARUKON",
  "mpConsume": null,
  "name": "Elysian",
  "pAtk": 232,
  "pAtkSpd": 379,
  "pDef": null,
  "price": 27000000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 4,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_elysian_i01.png",
      "itemId": 5602,
      "name": "Elysian - Health",
      "saName": "Health",
      "skills": [
        {
          "description": "Increases Max HP.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxHp",
              "value": 1.25,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3013,
          "level": 3,
          "name": "Special Ability: Health",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_elysian_i01.png",
      "itemId": 5603,
      "name": "Elysian - Anger",
      "saName": "Anger",
      "skills": [
        {
          "description": "Decreases Max HP and increases P. Atk.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxHp",
              "value": 0.85,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "pAtk",
              "value": 32,
            },
          ],
          "iconFile": null,
          "id": 3057,
          "level": 2,
          "name": "Special Ability: Anger",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": 24,
      "iconFile": "weapon_elysian_i01.png",
      "itemId": 5604,
      "name": "Elysian - Critical Drain",
      "saName": "Critical Drain",
      "skills": [
        {
          "description": null,
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3552,
          "level": 1,
          "name": "Special Ability: PvP Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
        {
          "description": "During a critical attack, absorbs 19 HP from target.",
          "iconFile": null,
          "id": 3059,
          "level": 2,
          "name": "Special Ability: Critical Drain",
          "operateType": "OP_ACTIVE",
          "power": 19,
          "skillType": "DRAIN",
          "target": "TARGET_ONE",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "BLUNT",
  "weight": 1580,
}
`;

exports[`item 213 (Branch of The Mother Tree) DTO matches snapshot 1`] = `
{
  "accCombat": 4,
  "armorType": null,
  "bodypart": "Two-handed",
  "craftedBy": [
    {
      "recipeItemId": 5462,
      "recipeName": "Recipe: Branch of The Mother Tree(60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 5463,
      "recipeName": "Recipe: Branch of The Mother Tree(100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2160,
  "etcItemType": null,
  "grade": "a",
  "iconFile": "weapon_worldtrees_branch_i00.png",
  "id": 213,
  "isDropable": null,
  "isMagical": true,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 152,
  "mDef": null,
  "material": "WOOD",
  "mpConsume": null,
  "name": "Branch of The Mother Tree",
  "pAtk": 226,
  "pAtkSpd": 325,
  "pDef": null,
  "price": 27000000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 4,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_worldtrees_branch_i01.png",
      "itemId": 5605,
      "name": "Branch of The Mother Tree - Conversion",
      "saName": "Conversion",
      "skills": [
        {
          "description": "Decreases Max HP and increases Max MP.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxMp",
              "value": 1.6,
            },
            {
              "op": "mul",
              "stat": "maxHp",
              "value": 0.6,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
          ],
          "iconFile": null,
          "id": 3048,
          "level": 2,
          "name": "Special Ability: Conversion",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": 30,
      "iconFile": "weapon_worldtrees_branch_i01.png",
      "itemId": 5606,
      "name": "Branch of The Mother Tree - Magic Damage",
      "saName": "Magic Damage",
      "skills": [
        {
          "description": null,
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3552,
          "level": 1,
          "name": "Special Ability: PvP Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
        {
          "description": null,
          "iconFile": null,
          "id": 3049,
          "level": 2,
          "name": "Special Ability: Increase Critical",
          "operateType": "OP_PASSIVE",
          "power": 8.39,
          "skillType": "MDAM",
          "target": "TARGET_NONE",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_worldtrees_branch_i01.png",
      "itemId": 5607,
      "name": "Branch of The Mother Tree - Acumen",
      "saName": "Acumen",
      "skills": [
        {
          "description": "Increases Casting Spd.",
          "effects": [
            {
              "op": "mul",
              "stat": "mAtkSpd",
              "value": 1.15,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
          ],
          "iconFile": null,
          "id": 3047,
          "level": 2,
          "name": "Special Ability: Acumen",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "BIGBLUNT",
  "weight": 900,
}
`;

exports[`item 287 (Bow of Peril) DTO matches snapshot 1`] = `
{
  "accCombat": 3,
  "armorType": null,
  "bodypart": "Two-handed",
  "craftedBy": [
    {
      "recipeItemId": 5007,
      "recipeName": "Recipe: Bow of Peril (60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 4199,
      "recipeName": "Recipe: Bow of Peril",
      "successRate": 100,
    },
  ],
  "crystalCount": 1746,
  "etcItemType": null,
  "grade": "b",
  "iconFile": "weapon_hazard_bow_i00.png",
  "id": 287,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 99,
  "mDef": null,
  "material": "BLOOD_STEEL",
  "mpConsume": 9,
  "name": "Bow of Peril",
  "pAtk": 400,
  "pAtkSpd": 293,
  "pDef": null,
  "price": 13100000,
  "rCrit": 12,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": 1500,
  "sDef": null,
  "soulshots": 3,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_hazard_bow_i01.png",
      "itemId": 4828,
      "name": "Bow of Peril - Guidance",
      "saName": "Guidance",
      "skills": [
        {
          "description": "Increases Accuracy.",
          "effects": [
            {
              "op": "add",
              "stat": "accCombat",
              "value": 4,
            },
          ],
          "iconFile": null,
          "id": 3008,
          "level": 6,
          "name": "Special Ability: Guidance",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_hazard_bow_i01.png",
      "itemId": 4829,
      "name": "Bow of Peril - Quick Recovery",
      "saName": "Quick Recovery",
      "skills": [],
      "statDelta": {
        "deltaPercent": -13,
        "display": "-13% Reuse Delay",
        "stat": "reuseDelay",
      },
    },
    {
      "effectChance": null,
      "iconFile": "weapon_hazard_bow_i01.png",
      "itemId": 4830,
      "name": "Bow of Peril - Cheap Shot",
      "saName": "Cheap Shot",
      "saveMechanic": {
        "amount": 2,
        "chance": 42,
        "kind": "mp",
      },
      "skills": [],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "BOW",
  "weight": 1700,
}
`;

exports[`item 288 (Carnage Bow) DTO matches snapshot 1`] = `
{
  "accCombat": 3,
  "armorType": null,
  "bodypart": "Two-handed",
  "craftedBy": [
    {
      "recipeItemId": 5444,
      "recipeName": "Recipe: Carnage Bow(60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 5445,
      "recipeName": "Recipe: Carnage Bow(100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 1464,
  "etcItemType": null,
  "grade": "a",
  "iconFile": "weapon_carnium_bow_i00.png",
  "id": 288,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 107,
  "mDef": null,
  "material": "DAMASCUS",
  "mpConsume": 9,
  "name": "Carnage Bow",
  "pAtk": 440,
  "pAtkSpd": 293,
  "pDef": null,
  "price": 18300000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 12,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": 1500,
  "sDef": null,
  "soulshots": 2,
  "specialAbilityOptions": [
    {
      "effectChance": 35,
      "iconFile": "weapon_carnium_bow_i01.png",
      "itemId": 5609,
      "name": "Carnage Bow - Critical Bleed",
      "saName": "Critical Bleed",
      "skills": [
        {
          "description": null,
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3552,
          "level": 1,
          "name": "Special Ability: PvP Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
        {
          "description": "Causes target to bleed, instantly reducing HP. Effect 7.",
          "iconFile": null,
          "id": 3053,
          "level": 1,
          "name": "Special Ability: Critical Bleed",
          "operateType": "OP_ACTIVE",
          "power": 70,
          "skillType": "BLEED",
          "target": "TARGET_ONE",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_carnium_bow_i01.png",
      "itemId": 5610,
      "name": "Carnage Bow - Mana Up",
      "saName": "Mana Up",
      "skills": [
        {
          "description": "Increases maximum MP.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxMp",
              "value": 1.3,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
          ],
          "iconFile": null,
          "id": 3014,
          "level": 2,
          "name": "Special Ability: Mana Up",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_carnium_bow_i01.png",
      "itemId": 4833,
      "name": "Carnage Bow - Quick Recovery",
      "saName": "Quick Recovery",
      "skills": [],
      "statDelta": {
        "deltaPercent": -10,
        "display": "-10% Reuse Delay",
        "stat": "reuseDelay",
      },
    },
    {
      "effectChance": null,
      "iconFile": "weapon_carnium_bow_i01.png",
      "itemId": 5608,
      "name": "Carnage Bow - Light",
      "saName": "Light",
      "skills": [
        {
          "description": null,
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3552,
          "level": 1,
          "name": "Special Ability: PvP Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
      "statDelta": {
        "deltaPercent": -70,
        "display": "-70% Weight",
        "stat": "weight",
      },
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "BOW",
  "weight": 1670,
}
`;

exports[`item 305 (Tallum Glaive) DTO matches snapshot 1`] = `
{
  "accCombat": 3,
  "armorType": null,
  "bodypart": "Two-handed",
  "craftedBy": [
    {
      "recipeItemId": 5456,
      "recipeName": "Recipe: Tallum Glaive(60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 5457,
      "recipeName": "Recipe: Tallum Glaive(100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2160,
  "etcItemType": null,
  "grade": "a",
  "iconFile": "weapon_tallum_glaive_i00.png",
  "id": 305,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": "3599-1",
  "mAtk": 114,
  "mDef": null,
  "material": "CHRYSOLITE",
  "mpConsume": null,
  "name": "Tallum Glaive",
  "pAtk": 232,
  "pAtkSpd": 325,
  "pDef": null,
  "price": 27000000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 8,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "skill": {
    "description": "Enables the character to attack multiple opponents.",
    "effects": [
      {
        "op": "add",
        "stat": "atkCountMax",
        "value": 4,
      },
    ],
    "iconFile": null,
    "id": 3599,
    "level": 1,
    "name": "Polearm Multi-attack",
    "operateType": "OP_PASSIVE",
    "power": null,
    "skillType": "BUFF",
    "target": "TARGET_SELF",
  },
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_tallum_glaive_i01.png",
      "itemId": 5632,
      "name": "Tallum Glaive - Guidance",
      "saName": "Guidance",
      "skills": [
        {
          "description": "Increases Accuracy, and enables the character to attack multiple opponents.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "accCombat",
              "value": 4,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 4,
            },
          ],
          "iconFile": null,
          "id": 3602,
          "level": 8,
          "name": "Special Ability: Guidance",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_tallum_glaive_i01.png",
      "itemId": 5633,
      "name": "Tallum Glaive - Health",
      "saName": "Health",
      "skills": [
        {
          "description": "Increases Max HP. Allows simultaneous attacks on multiple targets.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxHp",
              "value": 1.25,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 4,
            },
          ],
          "iconFile": null,
          "id": 3013,
          "level": 4,
          "name": "Special Ability: Health",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_tallum_glaive_i01.png",
      "itemId": 5634,
      "name": "Tallum Glaive - Wide Blow",
      "saName": "Wide Blow",
      "skills": [
        {
          "description": "Unleashes an attack that strikes multiple opponents,.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 4,
            },
          ],
          "iconFile": null,
          "id": 3552,
          "level": 2,
          "name": "Special Ability: PvP Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "POLE",
  "weight": 1840,
}
`;

exports[`item 6367 (Angel Slayer) DTO matches snapshot 1`] = `
{
  "accCombat": 3,
  "armorType": null,
  "bodypart": "One-handed",
  "craftedBy": [
    {
      "recipeItemId": 6887,
      "recipeName": "Recipe: Angel Slayer (60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 6888,
      "recipeName": "Recipe: Angel Slayer (100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2440,
  "etcItemType": null,
  "grade": "s",
  "iconFile": "weapon_angel_slayer_i00.png",
  "id": 6367,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 132,
  "mDef": null,
  "material": "ADAMANTAITE",
  "mpConsume": null,
  "name": "Angel Slayer",
  "pAtk": 246,
  "pAtkSpd": 433,
  "pDef": null,
  "price": 48800000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 12,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_angel_slayer_i01.png",
      "itemId": 6590,
      "name": "Angel Slayer - Crt. Damage",
      "saName": "Crt. Damage",
      "skills": [
        {
          "description": "Increases critical attack success rate.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "cAtkAdd",
              "value": 265,
            },
          ],
          "iconFile": null,
          "id": 3572,
          "level": 1,
          "name": "Special Ability: Crt. Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_angel_slayer_i01.png",
      "itemId": 6591,
      "name": "Angel Slayer - HP Drain",
      "saName": "HP Drain",
      "skills": [
        {
          "description": "Partially restores HP using damage inflicted upon the enemy. Excludes damage from skill or range attack.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "absorbDam",
              "value": 3,
            },
          ],
          "iconFile": null,
          "id": 3568,
          "level": 1,
          "name": "Special Ability: HP Drain",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_angel_slayer_i01.png",
      "itemId": 6592,
      "name": "Angel Slayer - Haste",
      "saName": "Haste",
      "skills": [
        {
          "description": "Increases Atk.Speed.",
          "effects": [
            {
              "op": "mul",
              "stat": "pAtkSpd",
              "value": 1.07,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
          ],
          "iconFile": null,
          "id": 3564,
          "level": 1,
          "name": "Special Ability: Haste",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "DAGGER",
  "weight": 950,
}
`;

exports[`item 6370 (Saint Spear) DTO matches snapshot 1`] = `
{
  "accCombat": 3,
  "armorType": null,
  "bodypart": "Two-handed",
  "craftedBy": [
    {
      "recipeItemId": 6893,
      "recipeName": "Recipe: Saint Spear (60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 6894,
      "recipeName": "Recipe: Saint Spear (100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2440,
  "etcItemType": null,
  "grade": "s",
  "iconFile": "weapon_saint_spear_i00.png",
  "id": 6370,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": "3599-1",
  "mAtk": 132,
  "mDef": null,
  "material": "ADAMANTAITE",
  "mpConsume": null,
  "name": "Saint Spear",
  "pAtk": 281,
  "pAtkSpd": 325,
  "pDef": null,
  "price": 48800000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 8,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "skill": {
    "description": "Enables the character to attack multiple opponents.",
    "effects": [
      {
        "op": "add",
        "stat": "atkCountMax",
        "value": 4,
      },
    ],
    "iconFile": null,
    "id": 3599,
    "level": 1,
    "name": "Polearm Multi-attack",
    "operateType": "OP_PASSIVE",
    "power": null,
    "skillType": "BUFF",
    "target": "TARGET_SELF",
  },
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_saint_spear_i01.png",
      "itemId": 6599,
      "name": "Saint Spear - Health",
      "saName": "Health",
      "skills": [
        {
          "description": "Increases Max HP. Allows simultaneous attacks on multiple targets.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxHp",
              "value": 1.25,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 4,
            },
          ],
          "iconFile": null,
          "id": 3013,
          "level": 4,
          "name": "Special Ability: Health",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_saint_spear_i01.png",
      "itemId": 6600,
      "name": "Saint Spear - Guidance",
      "saName": "Guidance",
      "skills": [
        {
          "description": "Increases Accuracy, and enables the character to attack multiple opponents.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "accCombat",
              "value": 5,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 4,
            },
          ],
          "iconFile": null,
          "id": 3602,
          "level": 9,
          "name": "Special Ability: Guidance",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_saint_spear_i01.png",
      "itemId": 6601,
      "name": "Saint Spear - Haste",
      "saName": "Haste",
      "skills": [
        {
          "description": "Increases Atk. Spd., and enables the character to attack multiple opponents.",
          "effects": [
            {
              "op": "mul",
              "stat": "pAtkSpd",
              "value": 1.07,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 4,
            },
          ],
          "iconFile": null,
          "id": 3601,
          "level": 9,
          "name": "Special Ability: Haste",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "POLE",
  "weight": 1800,
}
`;

exports[`item 6372 (Heaven's Divider) DTO matches snapshot 1`] = `
{
  "accCombat": null,
  "armorType": null,
  "bodypart": "Two-handed",
  "craftedBy": [
    {
      "recipeItemId": 6897,
      "recipeName": "Recipe: Heavens Divider (60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 6898,
      "recipeName": "Recipe: Heavens Divider (100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2440,
  "etcItemType": null,
  "grade": "s",
  "iconFile": "weapon_heavens_divider_i00.png",
  "id": 6372,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 132,
  "mDef": null,
  "material": "ADAMANTAITE",
  "mpConsume": null,
  "name": "Heaven's Divider",
  "pAtk": 342,
  "pAtkSpd": 325,
  "pDef": null,
  "price": 48800000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 8,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_heavens_divider_i01.png",
      "itemId": 6605,
      "name": "Heavens Divider - Haste",
      "saName": "Haste",
      "skills": [
        {
          "description": "Increases Atk.Speed.",
          "effects": [
            {
              "op": "mul",
              "stat": "pAtkSpd",
              "value": 1.07,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
          ],
          "iconFile": null,
          "id": 3564,
          "level": 1,
          "name": "Special Ability: Haste",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_heavens_divider_i01.png",
      "itemId": 6606,
      "name": "Heavens Divider - Health",
      "saName": "Health",
      "skills": [
        {
          "description": "Increases Max HP.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxHp",
              "value": 1.25,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3013,
          "level": 3,
          "name": "Special Ability: Health",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_heavens_divider_i01.png",
      "itemId": 6607,
      "name": "Heavens Divider - Focus",
      "saName": "Focus",
      "skills": [
        {
          "description": "Increases critical attack success rate.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "rCrit",
              "value": 84,
            },
          ],
          "iconFile": null,
          "id": 3566,
          "level": 1,
          "name": "Special Ability: Focus",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "BIGSWORD",
  "weight": 1380,
}
`;

exports[`item 6579 (Arcana Mace) DTO matches snapshot 1`] = `
{
  "accCombat": 4,
  "armorType": null,
  "bodypart": "One-handed",
  "craftedBy": [
    {
      "recipeItemId": 6899,
      "recipeName": "Recipe: Arcana Mace (60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 6900,
      "recipeName": "Recipe: Arcana Mace (100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2440,
  "etcItemType": null,
  "grade": "s",
  "iconFile": "weapon_arcana_mace_i00.png",
  "id": 6579,
  "isDropable": null,
  "isMagical": true,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 175,
  "mDef": null,
  "material": "ADAMANTAITE",
  "mpConsume": null,
  "name": "Arcana Mace",
  "pAtk": 225,
  "pAtkSpd": 379,
  "pDef": null,
  "price": 48800000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 4,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": null,
  "sDef": null,
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_arcana_mace_i01.png",
      "itemId": 6608,
      "name": "Arcana Mace - Acumen",
      "saName": "Acumen",
      "skills": [
        {
          "description": "Increases Casting Spd.",
          "effects": [
            {
              "op": "mul",
              "stat": "mAtkSpd",
              "value": 1.15,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
          ],
          "iconFile": null,
          "id": 3047,
          "level": 2,
          "name": "Special Ability: Acumen",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_arcana_mace_i01.png",
      "itemId": 6609,
      "name": "Arcana Mace - MP Regeneration",
      "saName": "MP Regeneration",
      "skills": [
        {
          "description": "Increases MP regeneration rate.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "regMp",
              "value": 0.5,
            },
          ],
          "iconFile": null,
          "id": 3576,
          "level": 1,
          "name": "Special Ability: MP Regeneration",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_arcana_mace_i01.png",
      "itemId": 6610,
      "name": "Arcana Mace - Mana Up",
      "saName": "Mana Up",
      "skills": [
        {
          "description": "Increases maximum MP.",
          "effects": [
            {
              "op": "mul",
              "stat": "maxMp",
              "value": 1.3,
            },
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
          ],
          "iconFile": null,
          "id": 3014,
          "level": 2,
          "name": "Special Ability: Mana Up",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "BLUNT",
  "weight": 1300,
}
`;

exports[`item 7575 (Draconic Bow) DTO matches snapshot 1`] = `
{
  "accCombat": 3,
  "armorType": null,
  "bodypart": "Two-handed",
  "craftedBy": [
    {
      "recipeItemId": 7580,
      "recipeName": "Recipe: Draconic Bow (60%)",
      "successRate": 60,
    },
    {
      "recipeItemId": 7581,
      "recipeName": "Recipe: Draconic Bow (100%)",
      "successRate": 100,
    },
  ],
  "crystalCount": 2440,
  "etcItemType": null,
  "grade": "s",
  "iconFile": "weapon_draconic_bow_i00.png",
  "id": 7575,
  "isDropable": null,
  "isMagical": null,
  "isSellable": null,
  "isStackable": null,
  "isTradable": null,
  "itemSkill": null,
  "mAtk": 132,
  "mDef": null,
  "material": "ADAMANTAITE",
  "mpConsume": 11,
  "name": "Draconic Bow",
  "pAtk": 581,
  "pAtkSpd": 293,
  "pDef": null,
  "price": 48800000,
  "pvpBonus": {
    "damageMultiplier": 1.05,
    "display": "+5% PvP Damage",
  },
  "rCrit": 12,
  "rEvas": null,
  "rShld": null,
  "reuseDelay": 1500,
  "sDef": null,
  "soulshots": 1,
  "specialAbilityOptions": [
    {
      "effectChance": null,
      "iconFile": "weapon_draconic_bow_i01.png",
      "itemId": 7576,
      "name": "Draconic Bow - Cheap Shot",
      "saName": "Cheap Shot",
      "saveMechanic": {
        "amount": 1,
        "chance": 26,
        "kind": "mp",
      },
      "skills": [
        {
          "description": null,
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3552,
          "level": 1,
          "name": "Special Ability: PvP Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": null,
      "iconFile": "weapon_draconic_bow_i01.png",
      "itemId": 7577,
      "name": "Draconic Bow - Focus",
      "saName": "Focus",
      "skills": [
        {
          "description": "Increases critical attack success rate.",
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "rCrit",
              "value": 88,
            },
          ],
          "iconFile": null,
          "id": 3567,
          "level": 1,
          "name": "Special Ability: Focus",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
      ],
    },
    {
      "effectChance": 16,
      "iconFile": "weapon_draconic_bow_i01.png",
      "itemId": 7578,
      "name": "Draconic Bow - Critical Slow",
      "saName": "Critical Slow",
      "skills": [
        {
          "description": null,
          "effects": [
            {
              "op": "mul",
              "stat": "pvpPhysDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpPhysSkillsDmg",
              "value": 1.05,
            },
            {
              "op": "mul",
              "stat": "pvpMagicalDmg",
              "value": 1.05,
            },
            {
              "op": "add",
              "stat": "atkCountMax",
              "value": 0,
            },
          ],
          "iconFile": null,
          "id": 3552,
          "level": 1,
          "name": "Special Ability: PvP Damage",
          "operateType": "OP_PASSIVE",
          "power": null,
          "skillType": "BUFF",
          "target": "TARGET_SELF",
        },
        {
          "description": "Temporarily decreases Speed. Effect 3.",
          "iconFile": null,
          "id": 3574,
          "level": 1,
          "name": "Special Ability: Crt. Slow",
          "operateType": "OP_ACTIVE",
          "power": 100,
          "skillType": "DEBUFF",
          "target": "TARGET_ONE",
        },
      ],
    },
  ],
  "spiritshots": 1,
  "type": "weapon",
  "weaponType": "BOW",
  "weight": 1650,
}
`;
